# cognito_django_nextjs

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  migrations.sh  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: authentication.py  backends.py  cognito.py  models.py  serializers.py  state.py  tokens.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/tools/: create_superuser.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/pages/: _app.tsx  index.tsx
